Very important CSS change to prevent the navigation from becoming ugly when collapsing.

--- a/Lisa.Excelsis.WebClient/wwwroot/common.css
+++ b/Lisa.Excelsis.WebClient/wwwroot/common.css
@@ -142,7 +142,7 @@ ul li a
 
 .navigationItem
 {
-    margin: 65px;
+    margin: 55px;
     padding: 50px;
 }
 
